--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script defer src="./dist/index.js"></script>
   </head>
   <body>
-    <h1>Calendar</h1>
     <div id="cal"></div>
     <style>
       body {
@@ -16,44 +15,52 @@
         font-family: sans-serif;
       }
       #cal {
-        border: 1px solid red;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        grid-gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        padding: 1rem;
       }
       .cal-month {
-        padding: 1rem;
+        border: 1px solid black;
       }
       .cal-month-name {
         padding: 0.5rem;
         text-align: center;
         font-weight: bold;
+        text-transform: capitalize;
+        background-color: black;
+        color: white;
       }
       .cal-day-names {
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(7, minmax(0, 1fr));
       }
       .cal-day-name {
         padding: 0.5rem;
         text-align: center;
-        font-weight: bold;
-        font-size: 0.85rem;
+        font-size: 0.8rem;
+        background-color: lightyellow;
+        border: 1px solid black;
       }
       .cal-grid {
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(7, minmax(0, 1fr));
+        grid-gap: 1px;
+        background-color: black;
       }
       .cal-day {
         aspect-ratio: 4/3;
         display: flex;
         justify-content: flex-end;
         padding: 0.5rem;
-        border: 1px solid lightgray;
+        font-size: 0.8rem;
+        background-color: white;
       }
       .cal-day--selected {
-        background-color: lightcoral;
+        background-color: lightskyblue;
       }
       .cal-day--preselected {
-        background-color: pink;
+        background-color: lightcyan;
       }
     </style>
   </body>
